--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeus-js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Zeus - a revolutionary solution for storing, managing, and securing your data with advanced technologies like blockchain, nanotech, Large Language Models (LLMs), AI, and quantum computing.",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "data storage",
     "data security"
   ],
-  "author": "",
+  "author": "GodChatCapital",
   "license": "MIT",
   "dependencies": {
   },
@@ -24,6 +24,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/zeus.git"
+    "url": "https://github.com/GodChatCapital/zeus-js.git"
   }
 }
